# claude-agent-toolkit

./: .gitignore  CLAUDE.md  CONFIGURATION.md  MVP_README.md  README.md  demo_mvp.py  full_flow_example.py  mvp.py  pyproject.toml  test_mvp.py  test_real_api.py  workflow_config.yaml
.github/workflows/: auto-pr.yml  release.yml
bug_fix/: README.md  auto_fix_issue.py  auto_fix_issue.py.backup  s.yaml
bug_fix/docs/: ARCHITECTURE.md  README.md
bug_fix/samples/: README.md  complete_workflow_demo.py  dependency_pool_demo.py  end_to_end_workflow_demo.py  error_handling_demo.py  mcp_services_demo.py  model_provider_demo.py  multi_agent_ab.py  observability_demo.py  sample_run.py  sandbox_execution_demo.py  system_initialization_demo.py  tools_integration_demo.py
bug_fix/src/: app.py  auto_fix_issue.py  bug_fix_agent.py  executors.py  live_status.py  test_auto_fix.py
bug_fix/src/adapters/: __init__.py  cli.py  fc_service.py  github_actions.py
bug_fix/src/agents/: __init__.py  base.py  claude_agent.py  registry.py
bug_fix/src/executors/: __init__.py  base.py  claude_code.py  cursor.py  custom.py  factory.py
bug_fix/src/git/: __init__.py  helper.py  pr_formatter.py
bug_fix/src/observability/: __init__.py  live_status.py
bug_fix/src/runtime/: __init__.py  context_loader.py  environment.py  paths.py
bug_fix/src/workflows/: __init__.py  pipeline.py
bug_fix/tests/: test_executor_basic.py  test_pipeline_smoke.py
config/: global_config.yaml
docs/: AUTOMATION_DESIGN.md  EXTERNAL_DEPENDENCIES_STANDARDIZATION.md  KNOWLEDGE_BASE_STANDARDIZATION.md  UNIFIED_PLATFORM_DESIGN.md
docs/samples/: gen_status_json.py  rebase_and_push.sh  run_failure_flow.sh  run_success_flow.py
scripts/: README.md  auto_fix_issue.py
src/claude_agent_toolkit/: __init__.py  constants.py  logging.py
src/claude_agent_toolkit/agent/: core.py  dependency_pool.py
src/claude_agent_toolkit/agent/executor/: subprocess.py
src/claude_agent_toolkit/system/: __init__.py  config.py  initialize.py  mcp_services.py  model_provider.py  observability.py  sandbox.py  usage.py
src/claude_agent_toolkit/tool/: __init__.py  decorator.py  external_dependencies.py  knowledge_base.py  knowledge_base_examples.py  mcp.py  utils.py
src/claude_agent_toolkit/tools/: datatransfer.py  filesystem.py
src/docker/: Dockerfile  entrypoint.py
src/examples/calculator/: tool.py
src/examples/subprocess/: tool.py
src/examples/weather/: tool.py
tests/: test_config_validation_failures.py  test_dependency_pool_events.py  test_dependency_pool_failures.py  test_external_dependencies_simple.py  test_knowledge_base.py  test_logging_events.py  test_mcp_lifecycle.py  test_model_provider_failures.py  test_sandbox_failures.py  test_system_initialization_failures.py  test_system_smoke.py
